<resources>
    <string name="app_name">WanAndroid_2</string>
    <string name="homepage">首页</string>
    <string name="knowledge">知识体系</string>
    <string name="Official">公众号</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="wanandroid">Wandroid</string>
    <string name="collect">收藏</string>
    <string name="setting">设置</string>
    <string name="about">关于我们</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="login_btn">登录</string>
    <string name="or">或</string>
    <string name="login_register">注册</string>
    <string name="et_login_login">请输入用户名</string>
    <string name="et_login_register">请输入密码</string>
    <string name="register_title">注册</string>
    <string name="register_admin">邮箱/手机号</string>
    <string name="register_pwd">输入密码</string>
    <string name="register_pwd2">确认密码</string>
    <string name="Automaticcache">自动缓存</string>
    <string name="noimg">无图模式</string>
    <string name="night">夜间模式</string>
    <string name="otherseeting">其他设置</string>
    <string name="opinion">意见反馈</string>
    <string name="eliminate">清除缓存</string>
    <string name="title_activity_about_we">AboutWeActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="WZcontent">\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习
    下知识；除此以外，并为大家提供平时开发过程中常用的工具好以及常用的网址导航。</string>
    <string name="WZcontent2">\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能.....</string>
    <string name="WZcontent3">\t\t如果您有任何好的建议：</string>
    <string name="WZcontent4">\t\t\t关于网站排版\n\t\t\t关于新增常用网址以及工具\n\t\t\t未来你希望增加的功能等</string>
    <string name="WZcontent5">\t\t可以在\n\t\thttps://github.com/hongyangAndroid/xueandroid项目中以issue的形式提出，我将及时跟进。</string>
    <string name="WZcontent6">\t\t如果您希望长期关注本站,可以即加入我们的QQ群：591683946</string>
    <string name="WZcontent7">\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击Github，在上面发起issue或者提交pull request.</string>
    <string name="changyongweb">常用网站</string>
    <string name="sousuohint">发现更多干货</string>
    <string name="sou">搜索</string>
    <string name="hotsou">热搜</string>
    <string name="history">搜索历史</string>
    <string name="empty">清空</string>


</resources>
