<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.wanandroid_2.activity.LoginActivity">

    <ImageView
        android:id="@+id/login_back_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/leftback" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="26sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="70dp">


        <EditText
            android:hint="@string/et_login_login"
            android:drawableLeft="@mipmap/admin"
            android:id="@+id/login_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp">

        <EditText
            android:hint="@string/et_login_register"
            android:drawableLeft="@mipmap/unsuo"
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="@drawable/login_login_btn"
            android:text="@string/login_btn"
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_centerInParent="true"
            android:layout_below="@id/login_btn_login"
            android:layout_margin="6dp"
            />

        <Button
            android:background="@drawable/login_register_btn"
            android:layout_below="@id/or"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/login_register"
            android:id="@+id/login_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>




</LinearLayout>
