<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303C59"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.wanandroid_2.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/register_left_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/leftjiantou" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="26sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_edtext_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/register_edtext"
            android:drawableLeft="@mipmap/emial"
            android:hint="@string/register_admin"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/register_edtext_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/register_edtext"
            android:drawableLeft="@mipmap/suo"
            android:hint="@string/register_pwd"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/register_edtext_pwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/register_edtext"
            android:drawableLeft="@mipmap/suo"
            android:hint="@string/register_pwd2"
            android:textColorHint="@color/white" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn_register"
            android:text="@string/register"
            android:background="@drawable/register_register_btn"
            android:layout_marginTop="80dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            />

    </LinearLayout>


</LinearLayout>
