<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.wanandroid_2.activity.SouSuoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/sou_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/left_black_back" />

        <EditText
            android:id="@+id/sou_ed_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="9"
            android:background="@drawable/daohang"
            android:drawableLeft="@mipmap/bigjing"
            android:hint="@string/sousuohint"
            android:padding="8dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:background="@drawable/shape"
            android:text="@string/sou"
            android:textColor="@color/white" />

    </LinearLayout>

    <include layout="@layout/item_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hotsou"
        android:textColor="@color/red"
        android:textSize="16sp" />

    <com.example.wanandroid_2.widgth.FlowLayout
        android:id="@+id/flow_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/history"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/empty"
            android:textColor="#8a8a8a" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/empty"
            android:src="@mipmap/rubbish" />



    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="快点搜点干货吧o(*￣▽￣*)ブ"
        android:textColor="@color/black" />

</LinearLayout>
