<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="通用设置" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/download"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="14dp"
                    android:src="@mipmap/download" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/download"
                    android:text="@string/Automaticcache" />

                <CheckBox
                    android:checked="true"
                    android:id="@+id/download_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp" />

            </RelativeLayout>
            <include layout="@layout/item_line"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/noimage_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="14dp"
                    android:src="@mipmap/noimage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/noimage_img"
                    android:text="@string/noimg" />

                <CheckBox
                    android:id="@+id/noimg_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp" />

            </RelativeLayout>

            <include layout="@layout/item_line"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/night_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="14dp"
                    android:src="@mipmap/night" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/night_img"
                    android:text="@string/night" />

                <CheckBox
                    android:id="@+id/night_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp" />

            </RelativeLayout>
            <include layout="@layout/item_line"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otherseeting"
        android:layout_margin="6dp"
        />

    <android.support.v7.widget.CardView
        app:cardElevation="6dp"
        app:cardCornerRadius="6dp"
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/opinion_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="14dp"
                    android:src="@mipmap/opinion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/opinion_img"
                    android:text="@string/opinion" />

            </RelativeLayout>
            <include layout="@layout/item_line"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/setting_rlv"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/eliminate_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="14dp"
                    android:src="@mipmap/eliminate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/eliminate_img"
                    android:text="@string/eliminate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eliminate_name"
                    android:text="66.6KB"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>